--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "mongoose": "^8.7.0",
     "nanoid": "^5.0.7",
     "pino": "^9.4.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
