--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^5.0.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.7.0",
     "nanoid": "^5.0.7",
     "pino": "^9.4.0",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^22.7.4",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
