--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
     "helmet": "^8.0.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.7.0",
     "nanoid": "^5.0.7",
     "pino": "^9.4.0",
+    "redis": "^4.7.0",
     "zod": "^3.23.8",
     "zod-validation-error": "^3.4.0"
   },
