--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,12 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.447.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
